added an info alert to tell user to input symptoms

--- a/static/styles.css
+++ b/static/styles.css
@@ -64,3 +64,18 @@ ul {
 li {
     margin-bottom: 5px;
 }
+
+.custom-alert {
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    border: 1px solid #f5c6cb;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.custom-alert p {
+    margin: 0;
+}
