--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 {% endfor %}
             </ul>
         {% else %}
-            <p>Please select at least one symptom to receive exercise recommendations.</p>
+            <p class="custom-alert">Please select at least one symptom to receive exercise recommendations.</p>
         {% endif %}
     </div>
 </body>
