made the symptom text capitalized

--- a/static/styles.css
+++ b/static/styles.css
@@ -26,6 +26,8 @@ label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    /* Capitalize all words in the symptom */
+    text-transform: capitalize;
 }
 
 select {
