--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     </form>
     <div id="recommendations">
         {% if recommendations %}
-            <h2>Recommended exercise:</h2>
+            <h2>Recommended Exercise:</h2>
             <ul>
                 {% for exercise in recommendations %}
                 <li>{{ exercise }}</li>
